--- a/dash-home.html
+++ b/dash-home.html
@@ -50,7 +50,7 @@
   <div class="container-fluid main p-0 m-0">
     <div class="row p-0 m-0">
       <div class="col-md-6">
-        <div class="button"><a href="/mitchel-dash.html">
+        <div class="button"><a href="mitchel-dash.html">
             <div class="card text-start">
               <img class="card-img-top d-block mx-auto img-fluid " src="img/cloud-sun.svg" alt="Title">
               <div class="card-body">
@@ -63,7 +63,7 @@
           </a></div>
       </div>
       <div class="col-md-6">
-        <div class="button"><a href="/rivesh-dash.html">
+        <div class="button"><a href="rivesh-dash.html">
             <div class="card text-start">
               <img class="card-img-top d-block mx-auto img-fluid" src="img/graph-up-arrow.svg" alt="Title">
               <div class="card-body">
@@ -78,7 +78,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6">
-        <div class="button"><a href="/dashboardgazi.html">
+        <div class="button"><a href="dashboardgazi.html">
           <div class="card text-start">
             <img class="card-img-top d-block mx-auto img-fluid" src="img/tags-fill.svg" alt="Title">
             <div class="card-body">
