--- a/message.html
+++ b/message.html
@@ -26,28 +26,31 @@
 
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-black">
-    <a class="navbar-brand" href="home.html"> <span class="text-black">.....</span>F<span class="text-danger">O</span>P</a>
+    <a class="navbar-brand" href="dash-home.html"> <span class="text-black">.....</span>F<span
+        class="text-danger">O</span>P</a>
     <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId"
       aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="collapsibleNavId">
       <ul class="navbar-nav me-auto mt-2 mt-lg-0 navbar-collapse justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" href="#" aria-current="page">Home<span class="visually-hidden">(current)</span></a>
+          <a class="nav-link active" href="dash-home.html" aria-current="page">Home<span
+              class="visually-hidden">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Message</a>
+          <a class="nav-link" href="message.html">Message</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Support</a>
+          <a class="nav-link" href="support-page.html">Support</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false">Dashboard's</a>
+          <a class="nav-link dropdown-toggle" href="home.html" id="dropdownId" data-bs-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">Dashboard's</a>
           <div class="dropdown-menu" aria-labelledby="dropdownId">
-            <a class="dropdown-item" href="#">dash 1</a>
-            <a class="dropdown-item" href="#">dash 2</a>
+            <a class="dropdown-item" href="rivesh-dash.html">Stocks</a>
+            <a class="dropdown-item" href="mitchel-dash.html">Weather</a>
             <a class="dropdown-item" href="#">dash 3</a>
-            <a class="dropdown-item" href="#">dash 4</a>
+            <a class="dropdown-item" href="dashboardgazi.html">Product price</a>
           </div>
         </li>
       </ul>
