--- a/support-page.html
+++ b/support-page.html
@@ -28,7 +28,7 @@
 <body>
   <!-- navbar -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-black">
-    <a class="navbar-brand" href="home.html"> <span class="text-black">.....</span>F<span
+    <a class="navbar-brand" href="dash-home.html"> <span class="text-black">.....</span>F<span
         class="text-danger">O</span>P</a>
     <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId"
       aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,14 +36,14 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId">
       <ul class="navbar-nav me-auto mt-2 mt-lg-0 navbar-collapse justify-content-end">
         <li class="nav-item">
-          <a class="nav-link" href="home.html">Home</a>
+          <a class="nav-link active" href="dash-home.html" aria-current="page">Home<span
+              class="visually-hidden">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="message.html">Message</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="support-page.html" aria-current="page">Support<span
-              class="visually-hidden">(current)</span></a>
+          <a class="nav-link" href="support-page.html">Support</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="home.html" id="dropdownId" data-bs-toggle="dropdown"
