--- a/mitchel-dash.html
+++ b/mitchel-dash.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="support-page.html">Support</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="home.html" id="dropdownId" data-bs-toggle="dropdown"
+              <a class="nav-link dropdown-toggle" href="dash-home.html" id="dropdownId" data-bs-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">Dashboard's</a>
               <div class="dropdown-menu" aria-labelledby="dropdownId">
                 <a class="dropdown-item" href="rivesh-dash.html">Stocks</a>
