--- a/mitchel-dash.html
+++ b/mitchel-dash.html
@@ -80,7 +80,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script defer src="/js/mitchel-dash.js"></script>
+    <script defer src="js/mitchel-dash.js"></script>
 </body>
 
 </html>
